<resources>
    <string name="app_name">Vaccination Manager</string>
    <string name="go_to_front_page">Go to Front Page</string>
    <string name="log_in_to_your_account">Log In to your Account</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="use_speech_recognition_to_enter_password">Use Speech Recognition To Enter Password</string>
    <string name="use_speech_recognition_to_enter_email">Use Speech Recognition To Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in_now">Already have an account? Log in now</string>
    <string name="create_an_account">Create an Account</string>
    <string name="log_off">Log Off</string>
    <string name="go_to_main_page">Go to Main Page</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="enter_your_phone">Enter your Phone</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_date_of_birth">Enter your Date of Birth</string>
    <string name="press_the_microphone_icons_to_use_the_speech_to_text_funcionality">Press the Microphone Icons to use the Speech to Text Funcionality</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="welcome_user">Welcome User</string>
    <string name="schedule_an_appointment">Schedule an Appointment</string>
    <string name="create_and_view_vaccination_certificate">Create and view vaccination certificate</string>
    <string name="view_your_appointment">View your appointment</string>
    <string name="scan_vaccination_certificates">Scan Vaccination Certificates</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="vaccination_certificate">Vaccination Certificate</string>
    <string name="enter_email">Enter Email</string>
    <string name="search_for_vaccination_status_by_email">Search for Vaccination Status by email</string>
    <string name="scan_vaccination_certificate">Scan Vaccination Certificate</string>
    <string name="first_name">First Name:</string>
    <string name="vaccination_status">Vaccination Status:</string>
    <string name="last_name">Last Name:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="telephone">Telephone:</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="your_vaccination_center">Your Vaccination Center</string>
    <string name="email">Email:</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="first_dose">First Dose</string>
    <string name="choose_date">Choose Date</string>
    <string name="second_dose">Second Dose</string>
    <string name="scedule_vaccination_appointment">Scedule Vaccination Appointment</string>
    <string name="the_two_dates_must_be_at_least_28_days_apart">The two dates must be at least 28 days apart</string>
    <string name="todo">TODO</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="find_closest_vaccination_center">Find Closest Vaccination Center</string>
    <string name="find_center">Find Center</string>
    <string name="continew_vac">Continew</string>
    <string name="vaccination_manager">Vaccination Manager</string>
    <string name="view_your_reservation">View your Reservation</string>
    <string name="center_name">Center Name:</string>
    <string name="center_address">Center Address:</string>
    <string name="date">Date:</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="reservation_info">Reservation Info</string>
    <string name="set_as_done">Set As Done</string>
    <string name="view_reservations_at_your_center">View Reservations at Your Center</string>
    <string name="user_not_found">User not found. Please log out and try again.</string>
    <string name="error">Error</string>
    <string name="already_appointment">User Already has an Appointment</string>
    <string name="old_date">The given timestamp is for a date in the past.</string>
    <string name="days_apart">The two dates must be at least 28 days apart</string>
    <string name="try_again">An error occurred. Please try again</string>
    <string name="not_found">Not Found</string>
    <string name="scan_qr">Scan a QR Code</string>
    <string name="cancelled">Cancelled</string>
    <string name="result">Scan Result</string>
    <string name="invalid_email">Enter a Valid Email Address.</string>
    <string name="log_out_try">Log Out And Try Again</string>
    <string name="language">Ελληνικά</string>
    <string name="welcom">Welcome </string>


</resources>